code_analysis/example-tree-sitter-grammar/test/corpus/literals.txt
=================
Decimals/Integers
=================

PROGRAM Main
x := 1_000_000_000; // Underscore separators
x := 1__000; // Repeating underscores
x := 1000__; // Trailing underscores
x := _10_00; // This is not a integer, but is a legal variable
x := -1___0___0_; // Leading signs are unary expressions because they can apply to variables
x := + 200000_00000;
END_PROGRAM

---

(source_file
  (program_definition
    programName: (identifier)
    (assignment
      (variable
        name: (identifier))
      (integer))
    (inline_comment)
    (assignment
      (variable
        name: (identifier))
      (integer))
    (inline_comment)
    (assignment
      (variable
        name: (identifier))
      (integer))
    (inline_comment)
    (assignment
      (variable
        name: (identifier))
      (variable
        name: (identifier)))
    (inline_comment)
    (assignment
      (variable
        name: (identifier))
      (unary_expression
        (integer)))
    (inline_comment)
    (assignment
      (variable
        name: (identifier))
      (unary_expression
        (integer)))))
